--- a/HTML/CSS/style.css
+++ b/HTML/CSS/style.css
@@ -12,9 +12,44 @@ header {
     background-color: #333;
     color: #fff;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80px;
+    height: 120px;
+}
+
+h1 {
+    margin-bottom: 1rem;
+}
+
+
+nav {
+    display: flex;
+    align-items: center;
+    background-color: #333;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    margin: 0 1rem;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #999;
 }
 
 /* Set the main section to display as a flex container with items aligned and justified to the center. Set the minimum height to the viewport height minus 80px (to account for the height of the header and footer). */
@@ -66,7 +101,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80px;
+    height: 100px;
 }
 
 /* Set the background color of the #joke-button element to dark gray, the text color to white, and remove the border. Add 10px padding to the top and bottom and 20px padding to the left and right. Set the cursor to be a pointer when hovering over the button. */
