The Chuckle Factory - V0.9 Description: 1) Category page is now Complete visually and functionally. 2) I have implementeed three bttuons from the Categories, I have chosen onlu 3 as I just wanted to showcase how this works. 3) When clicked on the button, the jockes from that category will be displayed below the button. i) The category page is completed but there still option to improve but I have only implemented basics to cover criteria of my assignment.
1) Search page is now complete but there is few things which I wanted to change and improve.
i) I will not implement them as I will mentiones my thoughts in the report and what I would have exactly done to accomplish those tasks.
2) Search box created when searched for a topic and clicked after, It will shows all the jokes in the API related to that search.
i) There is major issues with that search box Like I would have prefered that if I search I can see releated jokes on the bottom and then have options to select from them.
i) Also, the search box is limited to serches. and MAx limit for the API is 10 Searches per hour.

1) I have also created a banner on the top to show that the page is under Maintenance
i) Everything is achived by using HTML, CSS, Javascript and Cors.

Spoiler: Next update we will comment all the code and make the webpage semantic.
Also, we will check for Accessibility, Standards, Display, Functionallity, Efficiency, Readability, and documentation of the Code.

*More Updates Coming*

--- a/HTML/CSS/category.css
+++ b/HTML/CSS/category.css
@@ -104,8 +104,8 @@ footer {
     height: 100px;
 }
 
-/* Set the background color of the #joke-button element to dark gray, the text color to white, and remove the border. Add 10px padding to the top and bottom and 20px padding to the left and right. Set the cursor to be a pointer when hovering over the button. */
-#joke-button {
+/* Set the background color of the #movie-button element to dark gray, the text color to white, and remove the border. Add 10px padding to the top and bottom and 20px padding to the left and right. Set the cursor to be a pointer when hovering over the button. */
+#movie-button {
     background-color: #333;
     color: #fff;
     border: none;
@@ -114,15 +114,65 @@ footer {
     border: 2px solid black;
 }
 
-/* Set the background color of the #joke-button element to darker gray when it is hovered over */
-#joke-button:hover {
+/* Set the background color of the #movie-button element to darker gray when it is hovered over */
+#movie-button:hover {
     background-color: #444;
 }
 
-/* Set the margin and font size of the #joke-text element */
-#joke-text {
+/* Set the margin and font size of the #movie-text element */
+#movie-text {
     margin: 20px 0;
     /* add 20px space above and below the element */
     font-size: 18px;
     /* set the font size to 18px */
+    border: 2px solid black;
+}
+
+/* Set the background color of the #animal-button element to dark gray, the text color to white, and remove the border. Add 10px padding to the top and bottom and 20px padding to the left and right. Set the cursor to be a pointer when hovering over the button. */
+#animal-button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border: 2px solid black;
+}
+
+/* Set the background color of the #animal-button element to darker gray when it is hovered over */
+#animal-button:hover {
+    background-color: #444;
+}
+
+/* Set the margin and font size of the #animal-text element */
+#animal-text {
+    margin: 20px 0;
+    /* add 20px space above and below the element */
+    font-size: 18px;
+    /* set the font size to 18px */
+    border: 2px solid black;
+}
+
+/* Set the background color of the #history-button element to dark gray, the text color to white, and remove the border. Add 10px padding to the top and bottom and 20px padding to the left and right. Set the cursor to be a pointer when hovering over the button. */
+#history-button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border: 2px solid black;
+}
+
+/* Set the background color of the #history-button element to darker gray when it is hovered over */
+#history-button:hover {
+    background-color: #444;
+}
+
+/* Set the margin and font size of the #history-text element */
+#history-text {
+    margin: 20px 0;
+    /* add 20px space above and below the element */
+    font-size: 18px;
+    /* set the font size to 18px */
+    border: 2px solid black;
+    display: block;
 }
