--- a/HTML/CSS/about.css
+++ b/HTML/CSS/about.css
@@ -7,6 +7,27 @@ body {
     padding: 0;
 }
 
+#skip-button {
+    background-color: #333;
+    color: #fff;
+    font-size: 16px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+#skip-button:focus {
+    outline: none;
+}
+
+#skip-button:hover {
+    background-color: #666;
+}
+
 /* Set the header background color to dark gray, the text color to white, and display the header as a flex container with items aligned and justified to the center. Set the height to 80px. */
 header {
     background-color: #333;
