--- a/HTML/CSS/category.css
+++ b/HTML/CSS/category.css
@@ -7,6 +7,27 @@ body {
     padding: 0;
 }
 
+#skip-button {
+    background-color: #333;
+    color: #fff;
+    font-size: 16px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+#skip-button:focus {
+    outline: none;
+}
+
+#skip-button:hover {
+    background-color: #666;
+}
+
 /* Set the header background color to dark gray, the text color to white, and display the header as a flex container with items aligned and justified to the center. Set the height to 80px. */
 header {
     background-color: #333;
@@ -93,16 +114,6 @@ main {
     margin: 0;
 }
 
-/* Set the footer background color to dark gray, the text color to white, and display the footer as a flex container with items aligned and justified to the center. Set the height to 80px. */
-footer {
-    background-color: #333;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
-}
-
 /* Set the background color of the #movie-button element to dark gray, the text color to white, and remove the border. Add 10px padding to the top and bottom and 20px padding to the left and right. Set the cursor to be a pointer when hovering over the button. */
 #movie-button {
     background-color: #333;
@@ -174,4 +185,14 @@ footer {
     /* set the font size to 18px */
     border: 2px solid black;
     display: block;
+}
+
+/* Set the footer background color to dark gray, the text color to white, and display the footer as a flex container with items aligned and justified to the center. Set the height to 80px. */
+footer {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
 }
