The Chuckle Factory - V1.0.1
Minor Update:
Added P tags and used CSS to align it into Center.

There could be Minor Updates here and there for fix bugs in the Webpage.
If any further error found they will be Debugged and mentioned in the Source Control and they will fixed and mentioned.
Also, how I come up with a solution and what I did to the code in able to fix that error.
There may be few updates here and there if any further errors located.

**Additional Quality of LIfe Update**

--- a/HTML/CSS/style.css
+++ b/HTML/CSS/style.css
@@ -103,6 +103,14 @@ main {
   min-height: calc(100vh - 80px);
 }
 
+#unique {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: center;
+  margin: 0 auto;
+  width: 50%;
+}
+
 /* 
   Set elements with the .content class to display as a flex container with items in a column and aligned to the center 
 */
@@ -121,6 +129,8 @@ main {
   height: 210px;
   border: 2px solid black;
 }
+
+
 
 /* 
   Set elements with the .joke-box class to have a white background, 
