--- a/HTML/CSS/category.css
+++ b/HTML/CSS/category.css
@@ -80,6 +80,14 @@ main {
     min-height: calc(100vh - 80px);
 }
 
+#unique {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: center;
+    margin: 0 auto;
+    width: 50%;
+}
+
 /* Set elements with the .content class to display as a flex container with items in a column and aligned to the center */
 .content {
     display: flex;
